--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16096"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,25 +16,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ke5-L5-X2F">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="79" id="ke5-L5-X2F">
+                                <rect key="frame" x="0.0" y="28" width="375" height="79"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ke5-L5-X2F" id="Ncm-Mx-D0f">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uFo-1u-RvC">
-                                            <rect key="frame" x="16" y="-43" width="50" height="129"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AMq-uk-0Hr">
+                                            <rect key="frame" x="8" y="8" width="64" height="63"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="63" id="AsE-6I-6os"/>
+                                                <constraint firstAttribute="width" constant="64" id="UE7-pI-kuG"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Beb-yo-99G">
-                                            <rect key="frame" x="90" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bharat Kumar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Beb-yo-99G">
+                                            <rect key="frame" x="80" y="29" width="287" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Beb-yo-99G" firstAttribute="top" secondItem="Ncm-Mx-D0f" secondAttribute="top" constant="29" id="9D1-Vo-LiI"/>
+                                        <constraint firstAttribute="trailing" secondItem="Beb-yo-99G" secondAttribute="trailing" constant="8" id="SNN-Ck-3Jq"/>
+                                        <constraint firstItem="AMq-uk-0Hr" firstAttribute="top" secondItem="Ncm-Mx-D0f" secondAttribute="top" constant="8" id="jAX-25-wnI"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Beb-yo-99G" secondAttribute="bottom" constant="29" id="kc9-1u-lJG"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="AMq-uk-0Hr" secondAttribute="bottom" constant="8" id="q8F-lg-3pE"/>
+                                        <constraint firstItem="Beb-yo-99G" firstAttribute="leading" secondItem="AMq-uk-0Hr" secondAttribute="trailing" constant="8" id="r7J-7P-1ZR"/>
+                                        <constraint firstItem="AMq-uk-0Hr" firstAttribute="leading" secondItem="Ncm-Mx-D0f" secondAttribute="leading" constant="8" id="z37-vg-94B"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
